deployments/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-demo
  labels:
    app.kubernetes.io/name: my-demo
  annotations:
    metallb.universe.tf/address-pool: my-ip-pool
spec:
  selector:
    app.kubernetes.io/name: my-demo
  type: ClusterIP
  ports:
    - port: 6500
      name: http
      targetPort: 6500
      protocol: TCP
